--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bs4==0.0.1
 certifi==2018.4.16
 chardet==3.0.4
 eyeD3==0.8.5
+future==0.16.0
 greenlet==0.4.13
 idna==2.6
 lxml==4.2.1
@@ -11,6 +12,7 @@ msgpack==0.5.6
 neovim==0.2.6
 numpy==1.14.3
 pandas==0.22.0
+parsedatetime==2.4
 pathlib==1.0.1
 python-dateutil==2.7.2
 python-magic==0.4.15
