--- a/voetbal/training/requirements.txt
+++ b/voetbal/training/requirements.txt
@@ -1,8 +1,14 @@
 backcall==0.1.0
+cycler==0.10.0
 decorator==4.3.0
+greenlet==0.4.13
 ipython==6.4.0
 ipython-genutils==0.2.0
 jedi==0.12.1
+kiwisolver==1.0.1
+matplotlib==2.2.2
+msgpack==0.5.6
+neovim==0.2.6
 numpy==1.14.5
 pandas==0.23.1
 parso==0.3.0
@@ -11,6 +17,7 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
 scikit-learn==0.19.1
