--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ bs4==0.0.1
 certifi==2018.4.16
 chardet==3.0.4
 decorator==4.3.0
+defusedxml==0.5.0
+docopt==0.6.2
 eyeD3==0.8.5
 future==0.16.0
 greenlet==0.4.13
@@ -27,8 +29,9 @@ ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.7.2
 python-magic==0.4.15
+python-telegram-bot==10.1.0
 pytz==2018.4
-requests==2.18.4
+requests==2.20.1
 simplegeneric==0.8.1
 six==1.11.0
 tqdm==4.23.1
