--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,38 @@
 backcall==0.1.0
-beautifulsoup4==4.6.0
+beautifulsoup4==4.6.3
 begins==0.9
 bs4==0.0.1
-certifi==2018.4.16
+certifi==2018.11.29
 chardet==3.0.4
 decorator==4.3.0
-defusedxml==0.5.0
 docopt==0.6.2
-eyeD3==0.8.5
-future==0.16.0
-greenlet==0.4.13
-idna==2.6
-ipython==6.4.0
+eyeD3==0.8.8
+future==0.17.1
+greenlet==0.4.15
+idna==2.7
+ipython==7.2.0
 ipython-genutils==0.2.0
-jedi==0.12.0
-lxml==4.2.1
-msgpack==0.5.6
-neovim==0.2.6
-numpy==1.14.3
-pandas==0.22.0
-parsedatetime==2.4
-parso==0.2.1
+jedi==0.13.1
+lxml==4.2.5
+msgpack==0.6.0
+neovim==0.3.1
+numpy==1.15.4
+pandas==0.23.4
+parso==0.3.1
 pathlib==1.0.1
 pexpect==4.6.0
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-Pygments==2.2.0
-python-dateutil==2.7.2
+pickleshare==0.7.5
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
+Pygments==2.3.0
+pynvim==0.3.1
+python-dateutil==2.7.5
 python-magic==0.4.15
-python-telegram-bot==10.1.0
-pytz==2018.4
+pytz==2018.7
 requests==2.20.1
-simplegeneric==0.8.1
 six==1.11.0
-tqdm==4.23.1
+tqdm==4.28.1
 traitlets==4.3.2
-urllib3==1.22
+urllib3==1.24.1
 wcwidth==0.1.7
 xlrd==1.1.0
