--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,24 @@
-astroid==2.4.2
 backcall==0.2.0
-beautifulsoup4==4.9.1
-begins==0.9
-bs4==0.0.1
-certifi==2020.4.5.2
-chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.2
-docopt==0.6.2
-eyeD3==0.9.5
-future==0.18.2
-greenlet==0.4.16
-idna==2.9
-ipython==7.15.0
+ipython==7.19.0
 ipython-genutils==0.2.0
-isort==4.3.21
-jedi==0.17.0
-lazy-object-proxy==1.5.0
+jedi==0.17.2
+kiwisolver==1.3.1
 lxml==4.6.2
-mccabe==0.6.1
-msgpack==1.0.0
-numpy==1.18.5
-pandas==1.0.4
-parso==0.7.0
-pathlib==1.0.1
+matplotlib==3.3.4
+numpy==1.19.5
+pandas==1.2.0
+parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-prompt-toolkit==3.0.5
-ptyprocess==0.6.0
-Pygments==2.6.1
-pylint==2.5.3
-pynvim==0.4.1
+Pillow==8.1.1
+prompt-toolkit==3.0.8
+ptyprocess==0.7.0
+Pygments==2.7.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
-python-magic==0.4.18
-pytz==2020.1
-requests==2.23.0
+pytz==2020.5
 six==1.15.0
-soupsieve==2.0.1
-tqdm==4.46.1
-traitlets==4.3.3
-urllib3==1.25.9
-wcwidth==0.2.4
-wrapt==1.12.1
-xlrd==1.2.0
-
-psycopg2~=2.8.5
-python-dotenv~=0.13.0
+traitlets==5.0.5
+wcwidth==0.2.5
