--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,7 @@
-backcall==0.2.0
-cycler==0.10.0
-decorator==5.0.7
-ipython==7.23.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-kiwisolver==1.3.1
-lxml==4.6.3
-matplotlib==3.4.1
-matplotlib-inline==0.1.2
-numpy==1.20.2
-pandas==1.2.4
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.2
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-Pygments==2.8.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-six==1.15.0
-traitlets==5.0.5
-wcwidth==0.2.5
+ipython
+lxml
+numpy
+pandas
+Pillow
+beautifulsoup4
+requests
