Start with image parsing
For IVC images, I want to find Inter-Actief and highlight it with a box
with pytesseract.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,101 @@
-ipython
-lxml
-numpy
-pandas
-Pillow
-beautifulsoup4
-requests
+argcomplete==1.12.3
+backcall==0.1.0
+Beaker==1.10.0
+beautifulsoup4==4.9.3
+blivet==3.4.2
+blivet-gui==2.3.0
+Brlapi==0.8.2
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.4
+chrome-gnome-shell==0.0.0
+click==8.0.1
+cryptography==3.4.7
+cupshelpers==1.0
+dasbus==1.6
+dbus-python==1.2.18
+decorator==5.0.9
+defusedxml==0.7.1
+distlib==0.3.4
+distro==1.6.0
+fedora-third-party==0.8
+filelock==3.4.2
+fros==1.1
+gpg==1.15.1
+httpie==3.0.2
+humanize==0.5.1
+idna==3.2
+ipython==7.26.0
+ipython_genutils==0.1.0
+jedi==0.18.0
+langtable==0.0.56
+libcomps==0.1.18
+lxml==4.6.5
+Mako==1.1.4
+MarkupSafe==2.0.0
+matplotlib-inline==0.1.2
+multidict==5.1.0
+mutagen==1.45.1
+nftables==0.1
+numpy==1.22.2
+olefile==0.46
+opencv-python==4.5.5.62
+packaging==21.0
+parso==0.8.2
+Paste==3.5.0
+pbr==5.8.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pid==2.2.3
+Pillow==8.3.2
+platformdirs==2.4.1
+ply==3.11
+productmd==1.33
+prompt-toolkit==3.0.24
+ptyprocess==0.6.0
+pwquality==1.4.4
+pycairo==1.20.1
+pycparser==2.20
+pycrypto==2.6.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+pycurl==7.44.1
+pyenchant==3.2.2
+Pygments==2.9.0
+PyGObject==3.42.0
+pykickstart==3.34
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyparted==3.11.7
+PySocks==1.7.1
+pytesseract==0.3.8
+python-augeas==1.1.0
+python-dateutil==2.8.1
+python-meh==0.50
+pyudev==0.22.0
+pyxdg==0.27
+regex==2021.11.10
+requests==2.27.0
+requests-file==1.5.1
+requests-ftp==0.3.1
+requests-toolbelt==0.9.1
+rpm==4.17.0
+selinux==3.3
+sepolicy==3.3
+setools==4.4.0
+simpleaudio==1.0.4
+simpleline==1.8.2
+six==1.16.0
+sos==4.2
+soupsieve==2.3.1
+stevedore==3.5.0
+systemd-python==234
+Tempita==0.5.2
+traitlets==5.0.5
+urllib3==1.26.7
+virtualenv==20.13.0
+virtualenv-clone==0.5.7
+virtualenvwrapper==4.8.4
+wcwidth==0.2.5
+websockets==10.0
+yt-dlp==2022.1.21
